==> AIZER-egl/RCJ_Soccer_Open_2024/rpi_pico/lib/hardware/Adafruit_BNO055.cpp <==
#include "Adafruit_BNO055.h"

bool Adafruit_BNO055::write8(adafruit_bno055_reg_t reg, uint8_t value) {
    uint8_t buffer[2] = {(uint8_t)reg, (uint8_t)value};
    i2c_write_blocking(_port, _address, buffer, 2, false);
    return true;
}

uint8_t Adafruit_BNO055::read8(adafruit_bno055_reg_t reg) {
    uint8_t buffer[1] = {reg};
    i2c_write_blocking(_port, _address, buffer, 1, false);
    i2c_read_blocking(_port, _address, buffer, 1, false);
    return buffer[0];
}

bool Adafruit_BNO055::readLen(adafruit_bno055_reg_t reg, uint8_t *buffer,
                              uint8_t len) {
    uint8_t reg_buf[1] = {(uint8_t)reg};
    i2c_write_blocking(_port, _address, reg_buf, 1, true);
    return i2c_read_blocking(_port, _address, buffer, len, false);
}
